# ooxml-cli

./: .editorconfig  .gitattributes  .gitignore  .skill-loop-progress.md  Cargo.toml  FIXNOTES.md  GOAL.md  Makefile  OFFICE_REPAIR_CONFORMANCE_GOAL.md  README.md  go.mod
.beads/: config.yaml  issues.jsonl
.cargo/: config.toml
agent_ergonomics_audit/: README.md
docs/: command-manifest-refactor-plan.md  conditional-formatting-recon.md  layout-authoring.md  placeholder-key-rules.md  release-readiness-2026-07-11.md  render-fonts.md  rust-port-status.md  rust-unsafe-census.md  testing-strategy.md  theme-mutation.md  translation-id-rules.md  vba-macro-support.md  windows-office-oracle.md
go/: README.md  go.sum
src/: agent_aliases.rs  agent_triage.rs  apply.rs  capabilities.rs  cli_args.rs  cli_core.rs  cli_dispatch.rs  command_manifest.rs  command_text.rs  completion.rs  conformance.rs  conformance_invariants.rs  conformance_office.rs  diff.rs  doctor.rs  docx_authoring.rs  docx_block_commands.rs  docx_block_readers.rs  docx_comments.rs  docx_fields.rs  docx_headers.rs  docx_images.rs  docx_mutation_core.rs  docx_paragraph_commands.rs  docx_replace.rs  docx_styles.rs  docx_tables.rs  docx_xml.rs  find.rs  help.rs  inspect.rs  json_util.rs  lib.rs  main.rs  mcp.rs  mcp_support.rs  opc.rs  package_discovery.rs  pptx_authoring.rs  pptx_layout_qa.rs  (+46 more)
testdata/: rich-text-bold-colored.json  rich-text-bulleted.json
tests/: entity_conformance.rs  rust_contract_smoke.rs  vba_authoring_golden.rs  vba_authoring_provenance_golden.rs  vba_docm_authoring_golden.rs  (+4 more)
(+1354 files in other folders)
