[package]
name = "ooxml-cli"
version = "0.0.1"
edition = "2024"
rust-version = "1.96"

[[bin]]
name = "ooxml"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[profile.dev]
debug = 0
incremental = true

[profile.test]
debug = 0
incremental = true

[dependencies]
quick-xml = "0.38"
regex = "1"
serde_json = "1.0"
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
